--- a/empleado/templates/persona/list_all.html
+++ b/empleado/templates/persona/list_all.html
@@ -1,13 +1,46 @@
 {% extends 'base.html' %}
+
 {% block content %}
 {% include 'includes/header.html' %}
-    <h1>
-        LISTA DE TODOS LOS EMPLEADOS
-    </h1>
 
-    <ul>
-            {% for e in object_list  %}
-                <li>{{ e }}</li>                
-            {% endfor %}
-    </ul>
+
+<div class="grid-container">
+    <div class="grid-x">
+        <h1 class="cell">Lista Empleados</h1>
+        <form class="cell grid-x grid-margin-x" method="GET">{% csrf_token%} 
+            <div class="cell large-7">
+                <input type="text" id="kword" name="kword" placeholder="Buscar empleado">
+            </div>
+            <div class="cell large-2">
+                <button class="success button" type="submit">Buscar</button>                
+            </div>            
+        </form>
+        <div class="cell">
+            <table>
+                <thead>
+                  <tr>
+                    <th width="200">ID</th>
+                    <th>NOMBRES</th>
+                    <th width="150">APELLIDOS</th>
+                    <th width="150">DEPARTAMENTO</th>
+                    <th width="150">ACCION</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% for e in object_list  %}
+                    <tr>
+                        <td>{{ e.id }}</td>
+                        <td>{{ e.first_name}}</td>
+                        <td>{{ e.last_name}}</td>
+                        <td>{{ e.Departamento}}</td>
+                        <td><a class="button warning" href="{% url 'persona_app:empleado_detail' e.id %}">ver</a></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
+        </div>     
+    </div>
+</div>
+    
 {% endblock content %}
+
