--- a/empleado/templates/persona/list_all.html
+++ b/empleado/templates/persona/list_all.html
@@ -27,7 +27,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                    {% for e in object_list  %}
+                    {% for e in empleados  %}
                     <tr>
                         <td>{{ e.id }}</td>
                         <td>{{ e.first_name}}</td>
@@ -38,7 +38,36 @@
                     {% endfor %}
                 </tbody>
               </table>
-        </div>     
+        </div>   
+        <div class="cell">
+            {% if is_paginated %}
+            <nav aria-label="Pagination">
+                <ul class="pagination">
+                    
+                    {% if page_obj.has_previous %}
+                        <li class="pagination-previous">
+                        <a href="?page={{page_obj.previous_page_number}}">{{ pagina }}</a>
+                        Atras</li>
+                    {% endif %}
+                    
+                    {% for pagina in paginator.page_range %}
+
+                    {% if pagina == page_obj.number %} 
+                    <li class="current"><span class="show-for-sr">You're on page</span> {{ pagina }}</li>
+                    {% else %}
+                    <li><a href="?page={{pagina}}">{{ pagina }}</a></li>    
+                    {% endif %}
+                    {% endfor %}
+                        
+                    {% if page_obj.has_next %}
+                  <li class="pagination-next">
+                    <a href="?page={{page_obj.next_page_number}}" aria-label="Next page">Next 
+                    <span class="show-for-sr">page</span></a></li>
+                    {% endif %}
+                </ul>
+              </nav>
+            {% endif %}
+        </div>  
     </div>
 </div>
     
