--- a/empleado/templates/persona/add.html
+++ b/empleado/templates/persona/add.html
@@ -1,15 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>REGISTRAR PERSONA</h1>
-        <form method="POST">{% csrf_token%}
-            {{ form.as_p }}
-            <button type="submit">Agregar</button>          
-        </form>   
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block title %}
+    Registrar Empleado
+{% endblock title %}
+
+{% block content %}
+{% include 'includes/header.html' %}
+<div class="grid-container">
+    <div class="grid-x">
+        <h1 class="cell">Registrar Empleado</h1>
+        <form class="cell grid-x grid-margin-x" method="POST">{% csrf_token%}
+
+            <div class="medium-6 cell">
+                <label>Nombres:
+                    {{form.first_name}}
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label>Apellidos:
+                    {{form.last_name}}
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label>Trabajo:
+                    {{form.job}}
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label>Departamento:
+                    {{form.Departamento}}
+                </label>
+            </div>
+            <div class="medium-12 cell">
+                <label>Habilidades:
+                    {{form.habilidades}}
+                </label>
+            </div>
+            <div class="medium-12 cell">
+                <button type="submit" class="button succes">Guardar</button>
+            </div>                                  
+        </form>
+    </div>
+</div>    
+{% endblock content %}
