--- a/empleado/templates/departamento/new_departamento.html
+++ b/empleado/templates/departamento/new_departamento.html
@@ -1,10 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.html' %}
+
+{% block title %}
+    Registrar Departamento
+{% endblock title %}
+
+
+{% block content %}
+{% include 'includes/header.html' %}
+<div class="grid-container">
+    <div class="grid-x">
+        <h1 class="cell">Registrar Departamento</h1>
+        <form class="cell callout grid-x grid-margin-x" method="POST">{% csrf_token%}
+            <h3 class="cell">Datos del Empleado</h3>
+            <div class="medium-6 cell">
+                <label>Nombres:
+                    {{form.nombre}}
+                </label>
+            <div class="medium-6 cell">
+                <label>Apellidos:
+                    {{form.apellidos}}
+                </label>
+            </div>
+            <h3 class="cell">Datos del Departamento</h3>
+            <div class="medium-6 cell">
+                <label>Departamento:
+                    {{form.departamento}}
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label>Nombre corto:
+                    {{form.shorname}}
+                </label>
+            </div>
+            <div class="medium-12 cell">
+                <button type="submit" class="button succes">Guardar</button>
+            </div>
+            </div>
+        </form>
+    </div>
+
+</div>    
+
+
+{% endblock content %}
+    
+    
+
+
+
+
+
+
+
+
 <body>
     <h1>Registrar nuevo departamento</h1>
     <form method="POST"> {% csrf_token %}
