--- a/empleado/templates/includes/header.html
+++ b/empleado/templates/includes/header.html
@@ -8,6 +8,7 @@
         </li>
         <li><a href="{% url 'departamento_app:departamento_list' %}">Departamentos</a></li>
         <li><a href="{% url 'persona_app:empleados_admin' %}">Administrar</a></li>
+        <li><a href="{% url 'departamento_app:nuevo_departamento' %}">Nuevo Departamento</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
