--- a/empleado/templates/persona/add.html
+++ b/empleado/templates/persona/add.html
@@ -10,7 +10,7 @@
 <div class="grid-container">
     <div class="grid-x">
         <h1 class="cell">Registrar Empleado</h1>
-        <form class="cell grid-x grid-margin-x" method="POST">{% csrf_token%}
+        <form class="cell grid-x grid-margin-x" method="POST" enctype="multipart/form-data">{% csrf_token%}
 
             <div class="medium-6 cell">
                 <label>Nombres:
@@ -37,6 +37,12 @@
                     {{form.habilidades}}
                 </label>
             </div>
+            <div class="medium-12 cell">
+                <label>Imagen:
+                    {{form.avatar}}
+                </label>
+            </div>
+            
             <div class="medium-12 cell">
                 <button type="submit" class="button succes">Guardar</button>
             </div>                                  
