--- a/empleado/templates/persona/detail_empleado.html
+++ b/empleado/templates/persona/detail_empleado.html
@@ -1,18 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>detalle de un empleado {{ titulo }}</h1>
-    {{ object }}
-    <h3>Todos los datos</h3>
-    <p>{{empleado.first_name}}</p>
-    <p>{{empleado.last_name}}</p>
-    <p>{{empleado.job}}</p>
-    <p>{{empleado.Deperamento}}</p>
-    <p>{{empleado.habilidades}}</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+    {{object.full_name}}
+{% endblock title %}
+
+
+{% block content %}
+    {% include 'includes/header.html' %}
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x align-center">
+            <div class=" cell large-4 card" style="width: 300px; margin-top: 100px;">
+                <div class="card-divider">
+                  <h4>{{empleado.get_job_display}}</h4>
+                </div>                
+                {% if empleado.avatar %}
+                    <img src="{{ empleado.avatar.url }}">
+                {% else %}
+                    <img src="{% static 'img/image5.jpg' %}">
+                {% endif %}
+                <div class="card-section">
+                    <h4 class="cell">{{empleado.full_name}}</h4>
+                    <h4>detalle de un empleado {{ titulo }}</h1>
+                    {{ object }}
+                    <p>{{empleado.first_name}}</p>
+                    <p>{{empleado.last_name}}</p>
+                    <p>{{empleado.get_job_display}}</p>
+                    <p>{{empleado.Deperamento.short_name}}</p>
+                    <p><span class="label">HABILIDADES: </span></p>
+                    <ul class="vertical menu"></ul>
+                      {% for h in empleado.habilidades.all %}
+                        <li>{{h}}</li>
+                      {% endfor %}
+        
+                  <p></p>
+                </div>
+              </div>
+
+        </div>
+    </div>
+{% endblock content %}
+    
